--- a/SITE/src/main/resources/templates/staff_projects.html
+++ b/SITE/src/main/resources/templates/staff_projects.html
@@ -137,6 +137,10 @@
                 >
                   <i class="fas fa-trash-alt me-2"></i>
                 </a>
+                <a th:href="@{'/staff/projects/rubrics/' + ${project.id}}"
+                   class="btn btn-outline-info action-btn">
+                  <i class="fas fa-clipboard-list me-2"></i>
+                </a>
               </td>
             </tr>
           </tbody>
@@ -180,6 +184,7 @@
           </ul>
         </nav>
       </div>
+
       <footer class="mt-5 text-center p-3 text-secondary">
         <p class="mb-0 small">&copy; 2025 ADA University</p>
       </footer>
