--- a/SITE/src/main/resources/templates/rubric_management.html
+++ b/SITE/src/main/resources/templates/rubric_management.html
@@ -86,23 +86,14 @@
               <i class="fas fa-plus me-2"></i>Add
             </button>
           </div>
+          <input type="hidden" id="totalWeightage" th:value="${totalWeightage}" />
         </div>
       </form>
     </div>
   </div>
 </div>
 
-<script>
-   document.querySelector('form').addEventListener('submit', function(e) {
-        const currentTotal = parseFloat([[${totalWeightage}]]);
-        const newWeightage = parseFloat(document.getElementById('weightage').value);
-
-        if (currentTotal + newWeightage > 100) {
-            alert('Total weightage cannot exceed 100%. Current total: ' + currentTotal + '%');
-            e.preventDefault();
-        }
-    });
-</script>
+<script src="/js/rubric_management_script.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
