--- a/SITE/src/main/resources/templates/edit_project.html
+++ b/SITE/src/main/resources/templates/edit_project.html
@@ -226,6 +226,11 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script th:inline="javascript">
+      /*<![CDATA[*/
+      var savedSubcategories = /*[[${project.subcategories}]]*/ [];
+      /*]]>*/
+    </script>
     <script src="/js/edit_project_script.js"></script>
   </body>
 </html>
