--- a/SITE/src/main/resources/templates/admin_welcome.html
+++ b/SITE/src/main/resources/templates/admin_welcome.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,16 +27,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" th:href="@{/admin/welcome}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Students</a>
+              <a class="nav-link" th:href="@{/admin/students}">Students</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Staff</a>
+              <a class="nav-link" th:href="@{/admin/staff}">Staff</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" th:href="@{/admin/projects}">Projects</a>
             </li>
             <li class="nav-item">
               <a href="/logout" class="btn btn-danger">Logout</a>
@@ -59,7 +59,9 @@
             <div class="card-body text-center">
               <h5 class="card-title">Students</h5>
               <p class="card-text">View and manage student records.</p>
-              <a href="#" class="btn btn-primary">Go to Students</a>
+              <a th:href="@{/admin/students}" class="btn btn-primary"
+                >Go to Students</a
+              >
             </div>
           </div>
         </div>
@@ -68,7 +70,9 @@
             <div class="card-body text-center">
               <h5 class="card-title">Staff</h5>
               <p class="card-text">View and manage staff information.</p>
-              <a href="#" class="btn btn-primary">Go to Staff</a>
+              <a th:href="@{/admin/staff}" class="btn btn-primary"
+                >Go to Staff</a
+              >
             </div>
           </div>
         </div>
@@ -77,7 +81,9 @@
             <div class="card-body text-center">
               <h5 class="card-title">Projects</h5>
               <p class="card-text">Oversee and update project statuses.</p>
-              <a href="#" class="btn btn-primary">Go to Projects</a>
+              <a th:href="@{/admin/projects}" class="btn btn-primary"
+                >Go to Projects</a
+              >
             </div>
           </div>
         </div>
