--- a/SITE/src/main/resources/templates/staff_projects.html
+++ b/SITE/src/main/resources/templates/staff_projects.html
@@ -137,8 +137,10 @@
                 >
                   <i class="fas fa-trash-alt me-2"></i>
                 </a>
-                <a th:href="@{'/staff/projects/rubrics/' + ${project.id}}"
-                   class="btn btn-outline-info action-btn">
+                <a
+                  th:href="@{'/staff/projects/rubrics/' + ${project.id}}"
+                  class="btn btn-outline-info action-btn"
+                >
                   <i class="fas fa-clipboard-list me-2"></i>
                 </a>
               </td>
